tests/fixtures/invalid/divmod_bool_bytes.py
# Cannot call divmod() with Bool, Bytes
x = divmod(True, b"hello")
